--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -22758,5 +22758,117 @@
         "published": "Fri, 19 Dec 2025 15:57:01 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46327206\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/rocket-lab-wins-another-defense-related-space-contract/",
+        "title": "Rocket Lab wins another defense-related space contract",
+        "link": "https://techcrunch.com/2025/12/19/rocket-lab-wins-another-defense-related-space-contract/",
+        "published": "Fri, 19 Dec 2025 23:09:14 +0000",
+        "source": "TechCrunch",
+        "summary": "The $816 million contract follows a separate $515 million \u2014 both awarded by the U.S. Space Development Agency."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/building-venture-backable-companies-in-heavily-regulated-spaces/",
+        "title": "Building venture-backable companies in heavily regulated spaces",
+        "link": "https://techcrunch.com/2025/12/19/building-venture-backable-companies-in-heavily-regulated-spaces/",
+        "published": "Fri, 19 Dec 2025 23:09:03 +0000",
+        "source": "TechCrunch",
+        "summary": "This week on Build Mode, Startup Battlefield editor Isabelle Johannessen spoke to two founders who are working to make progress in industries ripe for disruption, despite the regulatory headaches that might have deterred many other people."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/former-patagonia-ceo-rose-marcario-resigns-from-rivians-board/",
+        "title": "Former Patagonia CEO Rose Marcario resigns from Rivian\u2019s board",
+        "link": "https://techcrunch.com/2025/12/19/former-patagonia-ceo-rose-marcario-resigns-from-rivians-board/",
+        "published": "Fri, 19 Dec 2025 22:13:34 +0000",
+        "source": "TechCrunch",
+        "summary": "Marcario joined the board in 2021, and will maintain her position as chair overseeing the Rivian Foundation, which made its first grants last year."
+    },
+    {
+        "id": "https://www.theverge.com/news/848462/nintendo-switch-2-smaller-cartridges-inin-games",
+        "title": "Did a publisher\u2019s slip-up reveal smaller Switch 2 cartridges?",
+        "link": "https://www.theverge.com/news/848462/nintendo-switch-2-smaller-cartridges-inin-games",
+        "published": "2025-12-19T17:49:55-05:00",
+        "source": "The Verge",
+        "summary": "On Friday, retro and arcade game publisher ININ Games surprisingly announced it's been able to \"recalculate production\" on offering a physical version of R-Type Dimensions III for the Switch 2 because \"Two days ago Nintendo announced two new smaller cartridge sizes for Nintendo Switch 2.\" Physical games on the Switch 2 have been something of [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/848455/google-assistant-gemini-upgrade-2026",
+        "title": "Gemini isn\u2019t replacing Google Assistant on Android just yet",
+        "link": "https://www.theverge.com/news/848455/google-assistant-gemini-upgrade-2026",
+        "published": "2025-12-19T17:39:14-05:00",
+        "source": "The Verge",
+        "summary": "Google isn't quite ready to replace Assistant with Gemini on Android devices. The company said on Friday that it will \"continue our work to upgrade Assistant users to Gemini on mobile devices into 2026,\" instead of its original plans to make the switch by the end of 2025. \"We're adjusting our previously announced timeline to [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/uncanny-valley-podcast-wired-roundup-tech-politics-trends-2025/",
+        "title": "WIRED Roundup: The 5 Tech and Politics Trends That Shaped 2025",
+        "link": "https://www.wired.com/story/uncanny-valley-podcast-wired-roundup-tech-politics-trends-2025/",
+        "published": "Fri, 19 Dec 2025 22:58:41 +0000",
+        "source": "WIRED",
+        "summary": "In today\u2019s episode of Uncanny Valley, we dive into five stories\u2014from AI to DOGE\u2014that encapsulate the year and give us clues as to what might unfold in 2026."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/the-evolution-of-expendability-why-some-ants-traded-armor-for-numbers/",
+        "title": "The evolution of expendability: Why some ants traded armor for numbers",
+        "link": "https://arstechnica.com/science/2025/12/the-evolution-of-expendability-why-some-ants-traded-armor-for-numbers/",
+        "published": "Fri, 19 Dec 2025 22:05:52 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Ants with lots of workers tend to put less energy into making them armored."
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/cheaper-lower-capacity-switch-2-cartridges-could-mean-fewer-game-key-cards/",
+        "title": "Switch 2 pub backs off Game Key Cards after leaking lower-cost cartridge options",
+        "link": "https://arstechnica.com/gaming/2025/12/cheaper-lower-capacity-switch-2-cartridges-could-mean-fewer-game-key-cards/",
+        "published": "Fri, 19 Dec 2025 21:30:08 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Inin suggests new low-cost options allowed it to \"recalculate production\" for full cartridge."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/lg-tvs-unremovable-copilot-shortcut-is-the-least-of-smart-tvs-ai-problems/",
+        "title": "LG TVs\u2019 unremovable Copilot shortcut is the least of smart TVs\u2019 AI problems",
+        "link": "https://arstechnica.com/gadgets/2025/12/lg-tvs-unremovable-copilot-shortcut-is-the-least-of-smart-tvs-ai-problems/",
+        "published": "Fri, 19 Dec 2025 21:18:07 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "LG says it'll let people delete the Copilot icon. But TV chatbots aren't going away."
+    },
+    {
+        "id": "https://www.engadget.com/ai/claudes-chrome-plugin-is-now-available-to-all-paid-users-221024295.html?src=rss",
+        "title": "Claude's Chrome plugin is now available to all paid users",
+        "link": "https://www.engadget.com/ai/claudes-chrome-plugin-is-now-available-to-all-paid-users-221024295.html?src=rss",
+        "published": "Fri, 19 Dec 2025 22:10:24 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Anthropic is finally letting more people use <a class=\"link\" href=\"https://claude.com/blog/claude-for-chrome\" target=\"_blank\">Claude in Google Chrome</a>. The company's AI browser plugin is <a class=\"link\" href=\"https://x.com/claudeai/status/2001748044434543082?s=20\" target=\"_blank\">expanding</a> beyond $200-per-month <a class=\"link\" href=\"https://www.engadget.com/ai/anthropics-max-plan-offers-nearly-unlimited-claude-usage-for-200-per-month-170032710.html\" target=\"_blank\">Max</a> subscribers "
+    },
+    {
+        "id": "https://gizmodo.com/what-james-cameron-changed-in-avatar-fire-and-ash-after-audiences-saw-way-of-water-2000702090",
+        "title": "What James Cameron Changed in \u2018Avatar: Fire and Ash\u2019 After Audiences Saw \u2018Way of Water\u2019",
+        "link": "https://gizmodo.com/what-james-cameron-changed-in-avatar-fire-and-ash-after-audiences-saw-way-of-water-2000702090",
+        "published": "Fri, 19 Dec 2025 22:15:28 +0000",
+        "source": "Gizmodo",
+        "summary": "In a new interview, Cameron gave details about the parts of 'Avatar 2' that inspired changes in 'Avatar 3.'"
+    },
+    {
+        "id": "https://gizmodo.com/runaway-black-hole-escapes-its-galaxy-and-its-leaving-baby-stars-in-its-wake-2000701981",
+        "title": "Runaway Black Hole Escapes Its Galaxy\u2014and It\u2019s Leaving Baby Stars in Its Wake",
+        "link": "https://gizmodo.com/runaway-black-hole-escapes-its-galaxy-and-its-leaving-baby-stars-in-its-wake-2000701981",
+        "published": "Fri, 19 Dec 2025 22:10:18 +0000",
+        "source": "Gizmodo",
+        "summary": "The Webb telescope confirmed one of the fastest moving celestial objects ever detected."
+    },
+    {
+        "id": "https://webkit.org/blog/17660/introducing-css-grid-lanes/",
+        "title": "CSS Grid Lanes",
+        "link": "https://webkit.org/blog/17660/introducing-css-grid-lanes/",
+        "published": "Fri, 19 Dec 2025 22:13:06 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46331586\">Comments</a>"
+    },
+    {
+        "id": "https://www.bamsoftware.com/hacks/zipbomb/",
+        "title": "A Better Zip Bomb",
+        "link": "https://www.bamsoftware.com/hacks/zipbomb/",
+        "published": "Fri, 19 Dec 2025 21:34:10 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46331216\">Comments</a>"
     }
 ]
