📚 Auto-update: News data refreshed - 2025-12-20 00:47 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -22870,5 +22870,45 @@
         "published": "Fri, 19 Dec 2025 21:34:10 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46331216\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/epstein-files-whats-in-doj-release-december-19/",
+        "title": "Here\u2019s What\u2019s in the DOJ\u2019s Epstein File Release\u2014and What\u2019s Missing",
+        "link": "https://www.wired.com/story/epstein-files-whats-in-doj-release-december-19/",
+        "published": "Sat, 20 Dec 2025 00:34:28 +0000",
+        "source": "WIRED",
+        "summary": "From photos of former president Bill Clinton to images of strange scrapbooks, the Justice Department\u2019s release is curious but far from revelatory."
+    },
+    {
+        "id": "https://arstechnica.com/google/2025/12/google-lobs-lawsuit-at-search-result-scraping-firm-serpapi/",
+        "title": "Google lobs lawsuit at search result scraping firm SerpApi",
+        "link": "https://arstechnica.com/google/2025/12/google-lobs-lawsuit-at-search-result-scraping-firm-serpapi/",
+        "published": "Fri, 19 Dec 2025 22:21:56 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Google says the lawsuit is its last resort."
+    },
+    {
+        "id": "https://gizmodo.com/star-trek-every-klingon-federation-war-explained-2000701584",
+        "title": "A Brief History of Klingon-Federation Conflict",
+        "link": "https://gizmodo.com/star-trek-every-klingon-federation-war-explained-2000701584",
+        "published": "Fri, 19 Dec 2025 23:15:36 +0000",
+        "source": "Gizmodo",
+        "summary": "If there's one thing 'Star Trek' loves, even in times of peace, it's a scrap between Starfleet and the Klingons."
+    },
+    {
+        "id": "https://mashable.com/article/dec-19-curiosity-stream-standard-plan-lifetime-subscription",
+        "title": "This documentary streaming service makes lying on the couch feel productive",
+        "link": "https://mashable.com/article/dec-19-curiosity-stream-standard-plan-lifetime-subscription",
+        "published": "Fri, 19 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Make binge-watching TV productive with a lifetime subscription to the unique streaming service Curiosity Stream, on sale now for just $149.99 (reg. $399.99)."
+    },
+    {
+        "id": "https://mashable.com/article/dec-19-apple-macbook-pro-i5",
+        "title": "Put a powerful MacBook Pro under the tree for less than $450",
+        "link": "https://mashable.com/article/dec-19-apple-macbook-pro-i5",
+        "published": "Fri, 19 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Bring home a MacBook Pro for just $429.99 (reg. $1,799) while supplies last."
     }
 ]
