--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -22910,5 +22910,37 @@
         "published": "Fri, 19 Dec 2025 23:00:00 +0000",
         "source": "Mashable",
         "summary": "Bring home a MacBook Pro for just $429.99 (reg. $1,799) while supplies last."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/ex-splunk-execs-startup-resolve-ai-hits-1-billion-valuation-with-series-a/",
+        "title": "Ex-Splunk execs\u2019 startup Resolve AI hits $1 billion valuation with Series A",
+        "link": "https://techcrunch.com/2025/12/19/ex-splunk-execs-startup-resolve-ai-hits-1-billion-valuation-with-series-a/",
+        "published": "Sat, 20 Dec 2025 00:58:42 +0000",
+        "source": "TechCrunch",
+        "summary": "The round was led by Lightspeed Venture Partners, according to people familiar with the deal."
+    },
+    {
+        "id": "https://www.theverge.com/news/848540/google-app-fees-external-link-downloads-alternative-payments",
+        "title": "Want to link from Google\u2019s app store to your app? That\u2019ll be $2\u20134 per install",
+        "link": "https://www.theverge.com/news/848540/google-app-fees-external-link-downloads-alternative-payments",
+        "published": "2025-12-19T20:17:27-05:00",
+        "source": "The Verge",
+        "summary": "Today was the deadline for Google to reveal how it's complying with Judge James Donato's order to crack open Android for third-party app stores, stop illegally tying its Google Play Billing system to its app store, and let developers link to ways to download their apps outside the Play Store in the US. But Google [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/848548/google-youtube-movies-anywhere-back-return",
+        "title": "Google is part of Movies Anywhere again",
+        "link": "https://www.theverge.com/news/848548/google-youtube-movies-anywhere-back-return",
+        "published": "2025-12-19T19:50:20-05:00",
+        "source": "The Verge",
+        "summary": "Google is once again part of Movies Anywhere, meaning that movies you've purchased from Google Play and YouTube will now show up as part of your Movies Anywhere collection. Films from Google Play and YouTube became unavailable on Movies Anywhere on October 31st, but now they should sync to your account again. \"Support for Google [&#8230;]"
+    },
+    {
+        "id": "https://www.statepress.com/article/2025/12/politics-pbs-newshour-west-closure",
+        "title": "PBS News Hour West to go dark after ASU discontinues contract",
+        "link": "https://www.statepress.com/article/2025/12/politics-pbs-newshour-west-closure",
+        "published": "Fri, 19 Dec 2025 23:59:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46332400\">Comments</a>"
     }
 ]
