📚 Auto-update: News data refreshed - 2025-12-20 03:43 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -22942,5 +22942,21 @@
         "published": "Fri, 19 Dec 2025 23:59:53 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46332400\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/sequoia-partner-spreads-debunked-brown-shooting-theory-testing-new-leadership/",
+        "title": "Sequoia partner spreads debunked Brown shooting theory, testing new leadership",
+        "link": "https://techcrunch.com/2025/12/19/sequoia-partner-spreads-debunked-brown-shooting-theory-testing-new-leadership/",
+        "published": "Sat, 20 Dec 2025 02:31:43 +0000",
+        "source": "TechCrunch",
+        "summary": "The newest episode raises questions about whether Sequoia's new leadership -- managing partners Alfred Lin and Pat Grady, who took over last month -- can or will rein in Maguire's social media activity."
+    },
+    {
+        "id": "https://carolinacloud.io/",
+        "title": "Carolina Cloud \u2013 One third the cost of AWS for data science workloads",
+        "link": "https://carolinacloud.io/",
+        "published": "Sun, 14 Dec 2025 21:43:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46267283\">Comments</a>"
     }
 ]
