--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -22958,5 +22958,45 @@
         "published": "Sun, 14 Dec 2025 21:43:35 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46267283\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-20",
+        "title": "NYT Pips hints, answers for December 20, 2025",
+        "link": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-20",
+        "published": "Sat, 20 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The New York Times' latest game, Pips, brings domino fun to your desktop. How to play Pips as well as hints in case you get stuck."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-20-2025",
+        "title": "NYT Connections Sports Edition today: Hints and answers for December 20, 2025",
+        "link": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-20-2025",
+        "published": "Sat, 20 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections: Sports Edition is a New York Times word game about finding common sports threads between words. How to solve the day's puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-20-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 20, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-20-2025",
+        "published": "Sat, 20 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-20-2025",
+        "title": "NYT Strands hints, answers for December 20, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-20-2025",
+        "published": "Sat, 20 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-20-2025",
+        "title": "Wordle today: Answer, hints for December 20, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-20-2025",
+        "published": "Sat, 20 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1644 on December 20 as well as a few hints, tips, and clues to help you solve it yourself."
     }
 ]
