📚 Auto-update: News data refreshed - 2025-12-20 06:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -22998,5 +22998,29 @@
         "published": "Sat, 20 Dec 2025 03:00:00 +0000",
         "source": "Mashable",
         "summary": "Here's the answer for \"Wordle\" #1644 on December 20 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-20-2025",
+        "title": "Hurdle hints and answers for December 20, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-20-2025",
+        "published": "Sat, 20 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-20",
+        "title": "Moon phase today: What the moon will look like on December 20",
+        "link": "https://mashable.com/article/moon-phase-today-dec-20",
+        "published": "Sat, 20 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 20, 2025 as well as when the next full moon is expected."
+    },
+    {
+        "id": "https://ewpratten.com/blog/fuzix-pi-pico",
+        "title": "Fuzix on a Raspberry Pi Pico",
+        "link": "https://ewpratten.com/blog/fuzix-pi-pico",
+        "published": "Mon, 15 Dec 2025 06:31:39 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46271115\">Comments</a>"
     }
 ]
