📚 Auto-update: News data refreshed - 2025-12-20 07:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -23022,5 +23022,29 @@
         "published": "Mon, 15 Dec 2025 06:31:39 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46271115\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/loop-earplugs-discount-code/",
+        "title": "Loop Earplugs Discount Codes and Deals: Save on Ear Buds and Gift Sets",
+        "link": "https://www.wired.com/story/loop-earplugs-discount-code/",
+        "published": "Sat, 20 Dec 2025 07:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Save on Loop Earplugs, including Quiet 2 and popular gift sets for improved sleep, focus, and comfort."
+    },
+    {
+        "id": "https://www.charlesproxy.com/",
+        "title": "Charles Proxy",
+        "link": "https://www.charlesproxy.com/",
+        "published": "Sat, 20 Dec 2025 06:09:17 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46333983\">Comments</a>"
+    },
+    {
+        "id": "https://support.google.com/googleplay/android-developer/answer/16470497?hl=en",
+        "title": "Android introduces $2-4 install fee and 10\u201320% cut for US external content links",
+        "link": "https://support.google.com/googleplay/android-developer/answer/16470497?hl=en",
+        "published": "Sat, 20 Dec 2025 05:00:55 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46333734\">Comments</a>"
     }
 ]
