--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -23046,5 +23046,13 @@
         "published": "Sat, 20 Dec 2025 05:00:55 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46333734\">Comments</a>"
+    },
+    {
+        "id": "https://servury.com/blog/privacy-is-marketing-anonymity-is-architecture/",
+        "title": "Privacy doesn't mean anything anymore, anonymity does",
+        "link": "https://servury.com/blog/privacy-is-marketing-anonymity-is-architecture/",
+        "published": "Sat, 20 Dec 2025 06:21:05 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46334025\">Comments</a>"
     }
 ]
