--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -23054,5 +23054,21 @@
         "published": "Sat, 20 Dec 2025 06:21:05 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46334025\">Comments</a>"
+    },
+    {
+        "id": "https://www.ianvisits.co.uk/articles/a-train-sized-tunnel-is-now-carrying-electricity-under-south-london-86221/",
+        "title": "A train-sized tunnel is now carrying electricity under South London",
+        "link": "https://www.ianvisits.co.uk/articles/a-train-sized-tunnel-is-now-carrying-electricity-under-south-london-86221/",
+        "published": "Sat, 20 Dec 2025 08:26:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46334483\">Comments</a>"
+    },
+    {
+        "id": "https://lists.nanog.org/archives/list/nanog@lists.nanog.org/message/ACADD3NKOG2QRWZ56OSNNG7UIEKKTZXL/",
+        "title": "NTP at NIST Boulder Has Lost Power",
+        "link": "https://lists.nanog.org/archives/list/nanog@lists.nanog.org/message/ACADD3NKOG2QRWZ56OSNNG7UIEKKTZXL/",
+        "published": "Sat, 20 Dec 2025 07:39:26 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46334299\">Comments</a>"
     }
 ]
