📚 Auto-update: News data refreshed - 2025-12-20 10:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -23070,5 +23070,29 @@
         "published": "Sat, 20 Dec 2025 07:39:26 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46334299\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-sleep-gifts/",
+        "title": "The Best Gifts for Sleep, as Tested by Our Team",
+        "link": "https://www.wired.com/gallery/best-sleep-gifts/",
+        "published": "Sat, 20 Dec 2025 10:04:00 +0000",
+        "source": "WIRED",
+        "summary": "Sleep is the one thing every giftee needs, and you can help them get it. These are our tried-and-tested picks for giftable sleep aids, from masks to melatonin."
+    },
+    {
+        "id": "https://www.zdnet.com/article/verizon-free-nintendo-switch-deal/",
+        "title": "Verizon will give you a free Nintendo Switch for just a few more days - here's how to qualify",
+        "link": "https://www.zdnet.com/article/verizon-free-nintendo-switch-deal/",
+        "published": "Sat, 20 Dec 2025 09:30:40 GMT",
+        "source": "Latest news",
+        "summary": "Verizon's holiday internet deals let you pick a free Nintendo Switch, Samsung TV, or tablet. Here's what to know."
+    },
+    {
+        "id": "https://antirez.com/news/157",
+        "title": "Reflections on AI at the End of 2025",
+        "link": "https://antirez.com/news/157",
+        "published": "Sat, 20 Dec 2025 09:38:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46334819\">Comments</a>"
     }
 ]
