--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -23094,5 +23094,77 @@
         "published": "Sat, 20 Dec 2025 09:38:51 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46334819\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/games/848449/nex-playground-review-nintendo-wii-microsoft-kinect-motion-tracking-camera",
+        "title": "The sold-out Nex Playground made my kids laugh and cry",
+        "link": "https://www.theverge.com/games/848449/nex-playground-review-nintendo-wii-microsoft-kinect-motion-tracking-camera",
+        "published": "2025-12-20T06:00:00-05:00",
+        "source": "The Verge",
+        "summary": "If you told me last year the Nex Playground would outsell Microsoft's Xbox, even for two weeks, I would have laughed my way out of the room. It's a three-inch cube of a game console that's likely less powerful than your phone, one which uses a single camera to track your body. It only plays [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/gear-news-of-the-week-lg-debuts-an-rgb-led-tv-and-google-brings-find-hub-to-wear-os/",
+        "title": "Gear News of the Week: LG Debuts an RGB LED TV, and Google Brings Find Hub to Wear OS",
+        "link": "https://www.wired.com/story/gear-news-of-the-week-lg-debuts-an-rgb-led-tv-and-google-brings-find-hub-to-wear-os/",
+        "published": "Sat, 20 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Plus: Samsung also announces new Micro RGB TVs, and a looming global memory crunch might make Nvidia reduce its supply of graphics cards."
+    },
+    {
+        "id": "https://www.wired.com/story/7-useful-tips-for-anyone-connecting-to-public-wi-fi/",
+        "title": "7 Useful Tips for Anyone Connecting to Public Wi-Fi",
+        "link": "https://www.wired.com/story/7-useful-tips-for-anyone-connecting-to-public-wi-fi/",
+        "published": "Sat, 20 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Our public spaces are now awash with wireless internet. Make sure you\u2019re getting the most out of every connection."
+    },
+    {
+        "id": "https://gizmodo.com/double-cosmic-explosion-gives-birth-to-unprecedented-superkilonova-2000700820",
+        "title": "Double Cosmic Explosion Gives Birth to Unprecedented \u2018Superkilonova\u2019",
+        "link": "https://gizmodo.com/double-cosmic-explosion-gives-birth-to-unprecedented-superkilonova-2000700820",
+        "published": "Sat, 20 Dec 2025 11:00:04 +0000",
+        "source": "Gizmodo",
+        "summary": "In a strange turn of events, a supernova birthed twin baby neutron stars that merged to make a powerful kilonova."
+    },
+    {
+        "id": "https://mashable.com/gifts/best-eco-friendly-gifts",
+        "title": "15+ eco-friendly gifts that someone would actually use",
+        "link": "https://mashable.com/gifts/best-eco-friendly-gifts",
+        "published": "Sat, 20 Dec 2025 10:19:35 +0000",
+        "source": "Mashable",
+        "summary": "Shop useful sustainable gift ideas, from clothes made from recycled bottles to reusable versions of disposable things they use every day."
+    },
+    {
+        "id": "https://mashable.com/video/ai-slop-explained",
+        "title": "AI slop is killing the internet",
+        "link": "https://mashable.com/video/ai-slop-explained",
+        "published": "Sat, 20 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "AI slop. It\u2019s just\u2026everywhere. Swipe through your FYP, your Reels, your timeline, and you\u2019ll see slop on slop. Mashable's Associate Editor Tim Marcin explains how we got here."
+    },
+    {
+        "id": "https://mashable.com/article/spelling-problems-in-children-help",
+        "title": "Kids arent learning to spell anymore",
+        "link": "https://mashable.com/article/spelling-problems-in-children-help",
+        "published": "Sat, 20 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "If your child struggles to spell, they're not alone. Here's what to do."
+    },
+    {
+        "id": "https://mashable.com/article/nasa-hubble-detects-exoplanet-asteroid-collisions",
+        "title": "NASAs Hubble saw fledgling planets colliding around a nearby star",
+        "link": "https://mashable.com/article/nasa-hubble-detects-exoplanet-asteroid-collisions",
+        "published": "Sat, 20 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "NASA's Hubble telescope saw two cosmic collisions around a nearby star like those theorized to have occurred long ago in our solar system."
+    },
+    {
+        "id": "https://github.com/magiblot/tvterm",
+        "title": "A terminal emulator that runs in your terminal. Powered by Turbo Vision",
+        "link": "https://github.com/magiblot/tvterm",
+        "published": "Wed, 17 Dec 2025 13:41:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46301847\">Comments</a>"
     }
 ]
