--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -23166,5 +23166,69 @@
         "published": "Wed, 17 Dec 2025 13:41:53 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46301847\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/transportation/846783/rivian-ai-autonomy-day-self-driving-lidar-chip-tesla",
+        "title": "Rivian\u2019s AI pivot is about more than chasing Tesla",
+        "link": "https://www.theverge.com/transportation/846783/rivian-ai-autonomy-day-self-driving-lidar-chip-tesla",
+        "published": "2025-12-20T07:00:00-05:00",
+        "source": "The Verge",
+        "summary": "RJ Scaringe is sitting in Rivian's Palo Alto offices, explaining why the adventure-themed EV company suddenly decided to build its own self-driving cars, when an unexpected guest glides by the window outside: Waymo. A robotaxi from the Alphabet-owned company pulls up outside the office. The passenger, an analyst from Goldman Sachs, briefly takes a selfie [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/trumps-agriculture-bailout-is-alienating-his-maha-base/",
+        "title": "Trump\u2019s Agriculture Bailout Is Alienating His MAHA Base",
+        "link": "https://www.wired.com/story/trumps-agriculture-bailout-is-alienating-his-maha-base/",
+        "published": "Sat, 20 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The administration\u2019s pro-industry tilt\u2014across three executive agencies\u2014is feeding the MAHA movement\u2019s growing discontent."
+    },
+    {
+        "id": "https://www.wired.com/story/best-amazon-prime-movies/",
+        "title": "The 23 Best Movies on Amazon Prime, WIRED's Picks (December 2025)",
+        "link": "https://www.wired.com/story/best-amazon-prime-movies/",
+        "published": "Sat, 20 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Wicked, Merry Little Batman, and Die Hard are just a few of the movies you should be watching on Amazon Prime Video this week."
+    },
+    {
+        "id": "https://www.wired.com/story/security-news-this-week-hackers-stole-millions-of-pornhub-users-data-for-extortion/",
+        "title": "Hackers Stole Millions of PornHub Users\u2019 Data for Extortion",
+        "link": "https://www.wired.com/story/security-news-this-week-hackers-stole-millions-of-pornhub-users-data-for-extortion/",
+        "published": "Sat, 20 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Plus: Cisco discloses a zero-day with no available patch, Venezuela accuses the US of a cyberattack, and more."
+    },
+    {
+        "id": "https://www.wired.com/story/amazon-super-saturday-deals-2025/",
+        "title": "25 Amazon Super Saturday Deals on Last-Minute Gifts We've Tested (2025)",
+        "link": "https://www.wired.com/story/amazon-super-saturday-deals-2025/",
+        "published": "Sat, 20 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Procrastinators, rejoice. Super Saturday is here with last-minute deals on WIRED-tested gear."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-rotate-computer-monitor/",
+        "title": "This simple monitor adjustment is the productivity upgrade I deeply regret not doing sooner",
+        "link": "https://www.zdnet.com/article/how-to-rotate-computer-monitor/",
+        "published": "Sat, 20 Dec 2025 12:00:48 GMT",
+        "source": "Latest news",
+        "summary": "Vertical monitors can streamline workflows in certain situations. Here's how to set one up in Windows 11 using either built-in or third-party tools."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-success-strategies-business-lenovo/",
+        "title": "5 ways Lenovo's AI strategy can deliver real results for you too",
+        "link": "https://www.zdnet.com/article/ai-success-strategies-business-lenovo/",
+        "published": "Sat, 20 Dec 2025 12:00:00 GMT",
+        "source": "Latest news",
+        "summary": "Art Hu, Lenovo's global CIO, explains how the tech giant exploits AI effectively. And you can do it, too."
+    },
+    {
+        "id": "https://brooker.co.za/blog/2025/12/15/database-for-ssd.html",
+        "title": "What Does a Database for SSDs Look Like?",
+        "link": "https://brooker.co.za/blog/2025/12/15/database-for-ssd.html",
+        "published": "Sat, 20 Dec 2025 10:13:33 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46334990\">Comments</a>"
     }
 ]
