--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -23374,5 +23374,29 @@
         "published": "Wed, 17 Dec 2025 12:08:21 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46301059\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/848134/best-last-minute-christmas-gifts-under-50-2025",
+        "title": "The best last-minute Christmas gifts you can grab for under $50",
+        "link": "https://www.theverge.com/gadgets/848134/best-last-minute-christmas-gifts-under-50-2025",
+        "published": "2025-12-20T12:00:13-05:00",
+        "source": "The Verge",
+        "summary": "Holiday shoppers, it's time to finish knocking out that seasonal wish list. At this point, your online purchases may not arrive in time unless you're willing to pay extra for priority shipping - or you happen to get lucky. Still, gifting anything at all is awfully nice of you, regardless of when it arrives. If [&#8230;]"
+    },
+    {
+        "id": "https://gizmodo.com/man-of-tomorrow-has-finally-found-its-brainiac-2000702241",
+        "title": "\u2018Man of Tomorrow\u2019 Has Finally Found Its Brainiac",
+        "link": "https://gizmodo.com/man-of-tomorrow-has-finally-found-its-brainiac-2000702241",
+        "published": "Sat, 20 Dec 2025 16:52:32 +0000",
+        "source": "Gizmodo",
+        "summary": "Give a 'hello' to Lars Eidinger, the man who'll be your Brainiac for 2027's 'Man of Tomorrow.'"
+    },
+    {
+        "id": "https://mashable.com/article/chatgpt-personality-settings-lets-users-choose-warmer-bot",
+        "title": "ChatGPT update lets users customize a warmer and more enthusiastic bot",
+        "link": "https://mashable.com/article/chatgpt-personality-settings-lets-users-choose-warmer-bot",
+        "published": "Sat, 20 Dec 2025 15:57:50 +0000",
+        "source": "Mashable",
+        "summary": "OpenAI launched a series of new updates to ChatGPT, including new personality settings."
     }
 ]
